--- a/_modules/xmlplain.html
+++ b/_modules/xmlplain.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>xmlplain &#8212; xmlplain 1.0.1 documentation</title>
+    <title>xmlplain &#8212; xmlplain 1.0.2 documentation</title>
     <link rel="stylesheet" href="../_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
     <script type="text/javascript" id="documentation_options" data-url_root="../" src="../_static/documentation_options.js"></script>
@@ -138,7 +138,7 @@
 
 <span class="kn">from</span> <span class="nn">__future__</span> <span class="k">import</span> <span class="n">print_function</span>
 
-<span class="n">__version__</span> <span class="o">=</span> <span class="s1">&#39;1.0.1&#39;</span>
+<span class="n">__version__</span> <span class="o">=</span> <span class="s1">&#39;1.0.2&#39;</span>
 
 <span class="kn">import</span> <span class="nn">yaml</span><span class="o">,</span> <span class="nn">sys</span><span class="o">,</span> <span class="nn">xml</span><span class="o">,</span> <span class="nn">io</span>
 <span class="kn">from</span> <span class="nn">xml.sax.saxutils</span> <span class="k">import</span> <span class="n">XMLGenerator</span>
@@ -384,23 +384,18 @@
             <span class="n">kind</span><span class="p">,</span> <span class="n">value</span> <span class="o">=</span> <span class="n">event</span>
             <span class="k">if</span> <span class="n">kind</span> <span class="o">==</span> <span class="s1">&#39;[&#39;</span><span class="p">:</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">stack</span> <span class="o">=</span> <span class="p">[{</span><span class="s1">&#39;_&#39;</span><span class="p">:</span> <span class="p">[]}]</span>
-                <span class="k">return</span>
-            <span class="k">if</span> <span class="n">kind</span> <span class="o">==</span> <span class="s1">&#39;]&#39;</span><span class="p">:</span>
+            <span class="k">elif</span> <span class="n">kind</span> <span class="o">==</span> <span class="s1">&#39;]&#39;</span><span class="p">:</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">value</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">children</span><span class="p">()[</span><span class="mi">0</span><span class="p">]</span>
-                <span class="k">return</span>
-            <span class="k">if</span> <span class="n">kind</span> <span class="o">==</span> <span class="s1">&#39;&lt;&#39;</span><span class="p">:</span>
+            <span class="k">elif</span> <span class="n">kind</span> <span class="o">==</span> <span class="s1">&#39;&lt;&#39;</span><span class="p">:</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">push_elt</span><span class="p">(</span><span class="n">value</span><span class="p">[</span><span class="mi">0</span><span class="p">])</span>
-                <span class="k">return</span>
-            <span class="k">if</span> <span class="n">kind</span> <span class="o">==</span> <span class="s1">&#39;&gt;&#39;</span><span class="p">:</span>
+            <span class="k">elif</span> <span class="n">kind</span> <span class="o">==</span> <span class="s1">&#39;&gt;&#39;</span><span class="p">:</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">process_children</span><span class="p">()</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">pop_elt</span><span class="p">(</span><span class="n">value</span><span class="p">[</span><span class="mi">0</span><span class="p">])</span>
-                <span class="k">return</span>
-            <span class="k">if</span> <span class="n">kind</span> <span class="o">==</span> <span class="s1">&#39;@&#39;</span><span class="p">:</span>
+            <span class="k">elif</span> <span class="n">kind</span> <span class="o">==</span> <span class="s1">&#39;@&#39;</span><span class="p">:</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">append_attr</span><span class="p">(</span><span class="n">value</span><span class="p">[</span><span class="mi">0</span><span class="p">],</span> <span class="n">value</span><span class="p">[</span><span class="mi">1</span><span class="p">])</span>
-                <span class="k">return</span>
-            <span class="k">if</span> <span class="n">kind</span> <span class="o">==</span> <span class="s1">&#39;|&#39;</span><span class="p">:</span>
+            <span class="k">elif</span> <span class="n">kind</span> <span class="o">==</span> <span class="s1">&#39;|&#39;</span><span class="p">:</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">append_content</span><span class="p">(</span><span class="n">value</span><span class="p">[</span><span class="mi">0</span><span class="p">])</span>
-            <span class="k">if</span> <span class="n">kind</span> <span class="o">==</span> <span class="s1">&#39;#&#39;</span><span class="p">:</span>
+            <span class="k">elif</span> <span class="n">kind</span> <span class="o">==</span> <span class="s1">&#39;#&#39;</span><span class="p">:</span>
                 <span class="k">pass</span>
     <span class="k">return</span> <span class="n">xml_to_events</span><span class="p">(</span><span class="n">inf</span><span class="p">,</span> <span class="n">ObjGenerator</span><span class="p">(</span><span class="n">strip_space</span><span class="o">=</span><span class="n">strip_space</span><span class="p">,</span> <span class="n">fold_dict</span><span class="o">=</span><span class="n">fold_dict</span><span class="p">))</span><span class="o">.</span><span class="n">get_value</span><span class="p">()</span></div>
 
